Change: Heading sizes on mobile Reduce heading sizes on mobile (h1-h5). Move each font size down a variable on mobile.

--- a/libs/base/type.less
+++ b/libs/base/type.less
@@ -283,3 +283,11 @@ hr {
     font-weight: 700;
     padding: .3em .5em;
 }
+
+@media (max-width: 750px) {
+    h1 { font-size: @font-size-larger; }
+    h2 { font-size: @font-size-large; }
+    h3 { font-size: @font-size-medium; }
+    h4 { font-size: @font-size-base; }
+    h5 { font-size: @font-size-base; }
+}
