Dev: Complete UC Calculator wireframe Add and update all pages needed in the UC calculator.

--- a/libs/jade/dev/uc/calculator-2.jade
+++ b/libs/jade/dev/uc/calculator-2.jade
@@ -33,7 +33,7 @@ block content
 	.articleContent
 		div
 			fieldset
-				legend(for="radio") How much do you have in savings?
+				legend(for="standardField") How much do you have in savings?
 				span.form-hint You can include pence
 				p Savings includes:
 				ul
