--- a/libs/jade/dev/uc/calculator-5.jade
+++ b/libs/jade/dev/uc/calculator-5.jade
@@ -33,13 +33,12 @@ block content
 	.articleContent
 		div
 			fieldset
-				legend(for="radio") How old are you?
+				legend(for="radio") Are you a carer for someone with severe physical or learning difficulties?
 				label.radio.radio--block
 					input(checked, name="radio", type="radio", value="option1")
-					| Under 25
+					| Yes
 				label.radio.radio--block
 					input(name="radio", type="radio", value="option2")
-					| 25 or over
-
-			a.btn-light.left-button-icon(href="calculator-2.html") Back
-			a.btn.right-button-icon(href="calculator-4.html", type="button") Continue
+					| No
+			a.btn-light.left-button-icon(href="calculator-4.html") Back
+			a.btn.right-button-icon(href="calculator-6.html", type="button") Continue
