--- a/libs/jade/dev/uc/calculator-4.jade
+++ b/libs/jade/dev/uc/calculator-4.jade
@@ -33,13 +33,26 @@ block content
 	.articleContent
 		div
 			fieldset
-				legend(for="radio") How old are you?
-				label.radio.radio--block
-					input(checked, name="radio", type="radio", value="option1")
-					| Under 25
-				label.radio.radio--block
-					input(name="radio", type="radio", value="option2")
-					| 25 or over
+				legend(for="exampleSelect1") How many children are in your household?
+				span.form-hint Include any children you're legally responsible for or foster.
+				.dropdown
+					select#exampleSelect1
+						option 0
+						option 1
+						option 2
+						option 3
+						option 4
+						option 5
+						option 6
+						option 7
+						option 8
+						option 9
+						option 10
+						option 11
+						option 12
+						option 13
+						option 14
+						option 15
 
-			a.btn-light.left-button-icon(href="calculator-2.html") Back
-			a.btn.right-button-icon(href="calculator-4.html", type="button") Continue
+			a.btn-light.left-button-icon(href="calculator-3.html") Back
+			a.btn.right-button-icon(href="calculator-5.html", type="button") Continue
