add: Created a style for users to click back through their answers in tools
Created a new style that lists the questions and answers to show a users journey through a tool. This allows them to click back to a specific point in a tool and change the answer. An example can be seen here https://www.citizensadvice.org.uk/consumer/energy/energy-supply/problems-with-your-energy-bill/find-out-if-youre-responsible-for-paying-an-energy-bill/

--- a/libs/jade/forms/buttons.jade
+++ b/libs/jade/forms/buttons.jade
@@ -117,3 +117,15 @@ block content
 					| 	&lt;button type="button" class="btn"&gt;Middle&lt;/button&gt;
 					| 	&lt;button type="button" class="btn"&gt;Right&lt;/button&gt;
 					| &lt;/div&gt;
+
+			.example-box-plain
+				.response
+					.q Do you own or rent your home?
+					.a
+						a.btn-light.btn-small Tenant
+				.response
+					.q Are you named on the bill?
+					.a
+						a.btn-light.btn-small Yes
+			pre
+				code.language-html
