--- a/libs/jade/forms/buttons.jade
+++ b/libs/jade/forms/buttons.jade
@@ -118,14 +118,17 @@ block content
 					| 	&lt;button type="button" class="btn"&gt;Right&lt;/button&gt;
 					| &lt;/div&gt;
 
+			h2 Response recap buttons
 			.example-box-plain
 				.response
-					.q Do you own or rent your home?
-					.a
-						a.btn-light.btn-small Tenant
-				.response
-					.q Are you named on the bill?
-					.a
-						a.btn-light.btn-small Yes
+					.response--q Question one?
+					.response--a
+						a.btn-light.btn-small Answer
 			pre
 				code.language-html
+					| &lt;div class="response"&gt;
+					| 	&lt;div class="response--q"&gt;Question one?&lt;/div&gt;
+					| 	&lt;div class="response--a"&gt;
+					| 		&lt;a class="btn-light btn-small"&gt;Answer&lt;/a&gt;
+					| 	&lt;/div&gt;
+					| &lt;/div&gt;
