add: Added a top border to the first .response div on a page
Added a top border above the first .response to help differentiate it from the cotnent above it

--- a/libs/base/forms.less
+++ b/libs/base/forms.less
@@ -732,6 +732,10 @@ input[class*="dob-"] {
     margin-bottom: @box-spacing-vertical;
     display: block;
     overflow: hidden;
+    &:first-of-type {
+        border-top: 1px solid @gray-6;
+        padding-top: @box-spacing-vertical;
+    }
     .response--q, .response--a {
         display: inline-block;
     }
