change: Updated the section notice styles to the development styles
Section notices have been updated to use a less intrusive style, which should help with Advisernet pages. It also add styling for .section-notice__changing, the new yellow box style. The existing .section-notice__content style has changed to green to be more appropriate with its general use.

--- a/libs/modules/section-notice.less
+++ b/libs/modules/section-notice.less
@@ -5,7 +5,7 @@
  *
  */
 
-.section-notice {
+/*.section-notice {
     background: @heritage-yellow-lighter;
     &__content {
         .limit-width;
@@ -50,7 +50,7 @@
             font-size: @font-size-small;
         }
     }
-}
+}*/
 
 /**
  * SECTION NOTICE DEVELOPMENT
@@ -59,7 +59,7 @@
  *
  */
 
-.section-notice--dev {
+.section-notice {
     &__content {
         .limit-width;
         padding: @box-spacing-horizontal 0 0 @box-spacing-horizontal;
