dev: Fixed issue whith logo showing underline and linking incorrectly to the index

--- a/libs/template/template.jade
+++ b/libs/template/template.jade
@@ -141,7 +141,7 @@ html.no-js
 		else
 			header.styleguide--header
 				.styleguide--header--content
-					a(href="index.html")
+					a(href="#{dir}index.html", style="border: none;")
 						img(src="#{dir}images/ca-logo-hz-white-280px.svg")
 
 		.main-container
