Change: content update on blog visual

--- a/libs/template/sidebar-blog.jade
+++ b/libs/template/sidebar-blog.jade
@@ -20,9 +20,9 @@
 
         .blog-sidebar--updates
             .card-banner-top
-                p(style="color:#fff;") Get updates of new blogs here
+                p(style="color:#fff;") Subscribe by email
             .card-text
-                p If you would like to test any of the new future research and testing you can sign up on the #[a(href="#" style="color:#FCBB69;") Get Involved page].
+                p Enter your name and email address to subscribe to the digital blog and receive notifications of new posts by email.
                 fieldset
                     label(for="name") Your name
                     input(type="Email", placeholder="Name")
