change: Removed icon from .response buttons

--- a/libs/base/forms.less
+++ b/libs/base/forms.less
@@ -745,11 +745,11 @@ input[class*="dob-"] {
     .response--a a {
         margin: 0;
         cursor: pointer;
-        &:after {
+        /*&:after {
             .icon;
-            content: @i-redo;
+            content: @i-undo;
             padding-left: 1em/2;
-        }
+        }*/
     }
     @media (min-width: @breakpoint-sm) {
         .response--q {
