--- a/libs/template/template-v3.jade
+++ b/libs/template/template-v3.jade
@@ -78,7 +78,7 @@ html
 							button.btn.btn-yellow
 								i.icon-search
 
-			#main-nav-2--dropdown(style="display:none;")
+			#main-nav-3--dropdown(style="display:none;")
 				.content
 					ul
 						li
@@ -127,6 +127,58 @@ html
 							| Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 						li
 							a(href="") More from us
+							br
+							| Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+
+			#main-nav-3--dropdown-1(style="display:none;")
+				.content
+					ul
+						li
+							a(href="") About Citizens Advice
+							br
+							| Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+						li
+							a(href="") Contact us
+							br
+							| Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+						li
+							a(href="") Policy research
+							br
+							| Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+						li
+							a(href="") Our blogs
+							br
+							| Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+						li
+							a(href="") Campaigns
+							br
+							| Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+						li
+							a(href="") How Citizens Advice works
+							br
+							| Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+						li
+							a(href="") Volunteer
+							br
+							| Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+						li
+							a(href="") Jobs
+							br
+							| Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+						li
+							a(href="") Press releases
+							br
+							| Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+						li
+							a(href="") Support us
+							br
+							| Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+						li
+							a(href="") The difference we make
+							br
+							| Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+						li
+							a(href="") Find your local Citizens Advice
 							br
 							| Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 
