--- a/libs/modules/main-nav-v3.less
+++ b/libs/modules/main-nav-v3.less
@@ -1,33 +1,4 @@
-#main-nav-1--branding {
-    background-color: @heritage-blue;
-    .content {
-        max-width: @breakpoint-lg;
-        padding: .5rem 1rem;
-        margin: 0 auto;
-        position: relative;
-        text-align: right;
-        ul {
-            list-style: none;
-            display: inline-block;
-            margin: 0;
-            //padding-right: 1rem;
-            li {
-                display: inline;
-                padding-left: 1.5rem;
-                font-size: @font-size-small;
-                a {
-                    color: @white;
-                    border: none;
-                    &:hover {
-                        text-decoration: underline;
-                    }
-                }
-            }
-        }
-    }
-}
-
-#main-nav-1--nav {
+#main-nav-3--nav {
     background-color: @heritage-blue-lighter;
     .content {
         max-width: @breakpoint-lg;
@@ -39,15 +10,12 @@
             border: none;
             display: table-cell;
             vertical-align: middle;
-            //position: relative;
             overflow: hidden;
             img {
                 width: 220px;
                 display: block;
                 list-style: none;
-                //margin: 1rem;
                 padding: 1rem 0;
-                //.vertical-align(absolute);
             }
         }
         ul {
@@ -55,56 +23,43 @@
             display: table-cell;
             vertical-align: middle;
             padding: 0;
-            //margin: 1rem 0;
-            text-align: right;
-            //margin-left: 236px;
-            //.vertical-align(absolute);
-            li.toggle {
+            text-align: center;
+            li {
                 display: inline-block;
                 font-weight: @font-weight-bolder;
-                padding: 0;
+                font-size: 1.2rem;
+                padding: 0 .35rem;
                 margin: 0;
-                margin-right: 1rem;
-                line-height: 1rem;
-                //float: left;
-                //background-color: @white;
+                margin-right:.5rem;
+                line-height: 2.8rem;
                 position: relative;
-                &:hover {
-                    background-color: @heritage-yellow-lighter;
-                    //@include transition(background, 0.2s);
-                    //cursor: pointer;
-                }
                 > a {
-                    background-color: @white;
+                    background-color: @heritage-blue-lighter;
                     padding: 0.675rem @box-spacing-horizontal/2;
-                    border-radius: 2px;
+                    //margin-right: 0.5rem;
                     color: @heritage-blue;
-                    //height: 100%;
                     display: inline-block;
-                    //line-height: 2.5rem;
-                    //font-size: @font-size-base;
                     border: none;
+                    &:hover {
+                        background-color: @heritage-yellow-lighter;
+                    }
                     &:after {
                         font-weight: 300;
                         content: @i-down;
                         padding: 0 0 0 @box-spacing-horizontal/2;
                         .icon;
-                        font-size: @font-size-small;
+                        font-size: @font-size-base;
                     }
                 }
                 &.active a {
-                    border-radius: 2px 2px 0 0;
-                    //border-bottom: .25rem solid white;
-                    box-shadow: 0px 12px 0px 0px @heritage-blue;
-                    background-color: @heritage-blue;
-                    color: @white;
+                    background-color: @heritage-yellow-lighter;
+                    color: @heritage-blue;
                 }
             }
         }
         .search {
             display: table-cell;
             vertical-align: middle;
-            //float: right;
             input {
                 border-color: @white;
                 width: 100%;
@@ -229,11 +184,32 @@
     }
 }
 
-.btn-yellow {
-        border: 1px solid @white !important;
-    .btn(
-        @btn-background: @heritage-yellow,
-        @btn-background-hover: @heritage-yellow-darker
-    );
+#main-nav-3--dropdown, #main-nav-3--dropdown-1 {
+    background-color: @heritage-yellow-lighter;
+    overflow: hidden;
+    .content {
+        max-width: @breakpoint-lg;
+        padding: 1.5rem 1.5rem 1.5rem-1rem 1.5rem;
+        margin: 0 auto;
+        overflow: hidden;
+        ul {
+            list-style: none;
+            padding-left: 0;
+            width: 100%;
+            column-count: 3;
+            column-gap: 4rem;
+            margin: 0;
+            li {
+                break-inside: avoid-column;
+                margin-bottom: 1rem;
+                a {
+                    font-weight: bold;
+                }
+            }
+            @media screen and (max-width: @screen-xs-max) {
+                column-gap: 2rem;
+                column-count: 2;
+            }
+        }
+    }
 }
-
