--- a/libs/site.less
+++ b/libs/site.less
@@ -88,6 +88,7 @@
 // Styles for new main navs
 @import "modules/main-nav-v1";
 @import "modules/main-nav-v2";
+@import "modules/main-nav-v3";
 
 /* IE styles */
 @import "base/ie";
