dev: Reorganised page 2 for logical progression of content
Included revealables in page 2 to give room for further content, without clogging up the tool too much. These might not be needed

--- a/libs/jade/dev/post-tool-2/post-tool-2.jade
+++ b/libs/jade/dev/post-tool-2/post-tool-2.jade
@@ -16,41 +16,49 @@ block breadcrumbs
 block content
 	.articleContent
 		div
-			fieldset
-				label.checkbox.checkbox--block
-					input(name="checkbox", type="checkbox")
-					| Royal Mail Door to Door
+			h2 Royal Mail Door to Door
+			p Royal Mail deliver mail for charities, businesses and other organisations who've paid for the service. Tick this box tell Royal Mail you don't want junk mail from them.
 			section.revealable
 				h2 More about Royal Mail Door to Door
 
 				p Royal Mail deliver mail for charities, businesses and other organisations who've paid for the service. Tick this box tell Royal Mail you don't want junk mail from them.
-
 			fieldset
 				label.checkbox.checkbox--block
 					input(name="checkbox", type="checkbox")
-					| Direct Marketing Association’s ‘Your Choice’ scheme
+					| I would like to opt in to Royal Mail Door to Door
+
+			h2 ‘Your Choice’ scheme
+			p This will reduce the amount of junk mail you receive.
 			section.revealable
 				h2 More about Direct Marketing Association’s ‘Your Choice’ scheme
 
 				p This will reduce the amount of junk mail you receive.
-
 			fieldset
 				label.checkbox.checkbox--block
 					input(name="checkbox", type="checkbox")
-					| Mailing Preference Service
+					| I would like to opt in to Direct Marketing Association’s ‘Your Choice’ scheme
+
+			h2 Mailing Preference Service
+			p The DMA has a list of people who don't want to get junk mail. Tick this box to add yourself to the list.
 			section.revealable
 				h2 More about Mailing Preference Service
 
 				p The DMA has a list of people who don't want to get junk mail. Tick this box to add yourself to the list.
-
 			fieldset
 				label.checkbox.checkbox--block
 					input(name="checkbox", type="checkbox")
-					| My local electoral registration office
+					| I would like to opt in to Mailing Preference Service
+
+			h2 Your local electoral registration office
+			p The MPS has a list of people who don't want to get junk mail. Tick this box to add yourself to the list.
 			section.revealable
 				h2 More about Your local electoral registration office
 
 				p The MPS has a list of people who don't want to get junk mail. Tick this box to add yourself to the list.
+			fieldset
+				label.checkbox.checkbox--block
+					input(name="checkbox", type="checkbox")
+					| I would like to opt in to my local electoral registration office
 
 			a.btn-light.left-button-icon(href="post-tool.html") Back
 			a.btn.right-button-icon(href="post-tool-3.html") Next
