dev: Updates to junk mail tool mockup
Made a few content and design changes.
* Removed accordions from second page
* Added headings to pages within the journey to help with context
* Removed callout from finish page
* Adjusted button text on page 4

--- a/libs/jade/dev/post-tool-2/post-tool-2.jade
+++ b/libs/jade/dev/post-tool-2/post-tool-2.jade
@@ -18,7 +18,7 @@ block content
 		div
 			h2 Royal Mail Door to Door
 			p Royal Mail deliver mail for charities, businesses and other organisations who've paid for the service. Tick this box tell Royal Mail you don't want junk mail from them.
-			section.revealable
+			//section.revealable
 				h2 More about Royal Mail Door to Door
 
 				p Royal Mail deliver mail for charities, businesses and other organisations who've paid for the service. Tick this box tell Royal Mail you don't want junk mail from them.
@@ -29,7 +29,7 @@ block content
 
 			h2 ‘Your Choice’ scheme
 			p This will reduce the amount of junk mail you receive.
-			section.revealable
+			//section.revealable
 				h2 More about Direct Marketing Association’s ‘Your Choice’ scheme
 
 				p This will reduce the amount of junk mail you receive.
@@ -40,7 +40,7 @@ block content
 
 			h2 Mailing Preference Service
 			p The DMA has a list of people who don't want to get junk mail. Tick this box to add yourself to the list.
-			section.revealable
+			//section.revealable
 				h2 More about Mailing Preference Service
 
 				p The DMA has a list of people who don't want to get junk mail. Tick this box to add yourself to the list.
@@ -51,7 +51,7 @@ block content
 
 			h2 Your local electoral registration office
 			p The MPS has a list of people who don't want to get junk mail. Tick this box to add yourself to the list.
-			section.revealable
+			//section.revealable
 				h2 More about Your local electoral registration office
 
 				p The MPS has a list of people who don't want to get junk mail. Tick this box to add yourself to the list.
