--- a/libs/jade/dev/post-tool-2/post-tool-3.jade
+++ b/libs/jade/dev/post-tool-2/post-tool-3.jade
@@ -16,6 +16,7 @@ block breadcrumbs
 block content
 	.articleContent
 		div
+			h2 Your details
 			p Fill in your details, and we’ll email the services you've chosen. We'll provide a letter for you to download and send to any service that doesn't accept emails
 
 			fieldset
@@ -27,7 +28,7 @@ block content
 				input#standardField(placeholder="", type="text")
 
 			fieldset
-				label(for="standardField") Town or city #[span.optional (optional)]
+				label(for="standardField") Town or city
 				input#standardField(placeholder="", type="text")
 
 			fieldset
