--- a/libs/jade/dev/post-tool-2/post-tool-4.jade
+++ b/libs/jade/dev/post-tool-2/post-tool-4.jade
@@ -27,6 +27,7 @@ block content
 		.flex-container
 			.flex-row
 				.form.col-xs-12.col-md-4
+					h2 Confirmation
 					p This is what your email and letter to the services you chose will look like.
 					ul
 						li Local Electoral Registration
@@ -35,8 +36,8 @@ block content
 						li Direct Marketing Association
 					p You can go back and make changes if you need to.
 
-					a.btn-light.left-button-icon(href="post-tool-3.html") Edit
-					a.btn.right-button-icon(href="post-tool-5.html") Next
+					a.btn-light.left-button-icon(href="post-tool-3.html") Edit details
+					a.btn.right-button-icon(href="post-tool-5.html") Confirm
 
 				#letter.col-xs-12.col-md-8
 					.letter-content
