--- a/libs/jade/dev/post-tool-2/post-tool-6.jade
+++ b/libs/jade/dev/post-tool-2/post-tool-6.jade
@@ -16,6 +16,8 @@ block breadcrumbs
 block content
 	.articleContent
 		div
+			h2 Your letters
+
 			p Your local electoral registration office is listed below, and on your letter when you download it.
 
 			p You'll need to post or email them your letter as an attachment to be taken off the ‘open register’.
@@ -41,7 +43,9 @@ block content
 				a.btn-secondary.save-button-icon(href="post-tool-7.html") Download
 
 			.well--outline
-				h2 London Borough of Bromley
+				h2 Your letter for your local electoral registration office
+				p
+					strong London Borough of Bromley
 
 				p Visit the #[a(href="#") London Borough of Bromley website]
 
