--- a/libs/modules/savebar.less
+++ b/libs/modules/savebar.less
@@ -167,6 +167,7 @@ h4:hover .save-button {
   position: relative;
   top: 20px;
   border-top: 4px solid @gray-7;
+  cursor: pointer;
 }
 
 .tab .content {
@@ -174,7 +175,7 @@ h4:hover .save-button {
   top: 88px;
   left: 0px;
   background: @white;
-  overflow-y: scroll;
+  overflow-y: auto;
   width: 99%;
   padding: 15px;
 }
