change: Created new layout for repo index, but currently commented out
A new layout for the index page of the repo was created, but left in the file commented out until we can finalise the content for it

--- a/libs/jade/index.jade
+++ b/libs/jade/index.jade
@@ -8,6 +8,94 @@ block breadcrumbs
 		{title: "Home"}])
 
 block content
+	// NEW INDEX
+	//.articleContent
+		.newrow
+			.span8-md
+				p Intro to styleguide. Contains things and such.
+
+		.newrow
+			.span6-sm
+
+				h2 Getting started
+				ul
+					li
+						a(href="principles.html") Digital principles
+					li
+						a.a-external(href="#") cab-ui repo
+					li
+						a(href="#") Setting up your environment
+					li
+						a.a-external(href="#") Content styleguide
+					li
+						a.a-external(href="#") Brand guidelines
+			.span6-sm
+				h2 Resources
+				ul
+					li
+						a.a-external(href="#") Blog Wordpress template
+					li
+						a.a-external(href="#") Styleguide Wordpress template
+
+		.newrow
+			.span8-md
+				h2 Digital design elements
+				p here are the elements. lovem.
+
+		.newrow
+			.span3-md.span6-sm
+				h3#Styles Styles
+				ul
+					li
+						a(href="styles/typography.html") Typography
+					li
+						a(href="styles/colours.html") Colours
+					li
+						a(href="styles/icons.html") Icons
+					li
+						a(href="styles/tables.html") Tables
+
+			.span3-md.span6-sm
+				h3#Forms Forms
+				ul
+					li
+						a(href="forms/buttons.html") Buttons
+					li
+						a(href="forms/fields.html") Fields
+					li
+						a(href="forms/field-groups.html") Field groups
+					li
+						a(href="forms/validation.html") Form validation
+
+			.span3-md.span6-sm
+				h3#Modules Modules
+				ul
+					li
+						a(href="modules/callout.html") Callout
+					li
+						a(href="modules/revealable.html") Revealable
+					li
+						a(href="modules/charts.html") Charts
+					li
+						a(href="modules/section-notice.html") Section Notices
+					li
+						a(href="modules/toolbar.html") Content toolbar
+					li
+						a(href="modules/cookie-monster.html") Cookie Monster
+					li
+						a(href="modules/browser-warning.html") Browser warning
+					li
+						a(href="modules/sticky.html") Sticky box
+
+			.span3-md.span6-sm
+				h3#Branding Branding
+				ul
+					li
+						a(href="branding/brand-icons.html") Brand icons
+					li
+						a(href="branding/speech-line.html") Speech line
+
+
 	.articleContent
 		.newrow
 			.span8
