change: replace i-circle with i-github and removed i-circle-checked
i-circle and i-circle-checked icons were no longer being used, so they have been removed. i-github has been added with the same code as i-circle (e902)

--- a/libs/base/variables.less
+++ b/libs/base/variables.less
@@ -277,6 +277,5 @@
 @i-twitter: 				"\e60d";
 @i-undo:                    "\e626";
 @i-vertical-dots:			"\e901";
-@i-circle:					"\e902";
-@i-circle-check:			"\e903";
+@i-github:					"\e902";
 @i-zws: 					"_";
