--- a/libs/guide.less
+++ b/libs/guide.less
@@ -1241,12 +1241,8 @@ div.tooltip:before {
         content: @i-vertical-dots;
     }
 
-    .i-circle .icon:before {
-        content: @i-circle;
-    }
-
-    .i-circle-check .icon:before {
-        content: @i-circle-check;
+    .i-github .icon:before {
+        content: @i-github;
     }
 
     .brand-accelerator .icon-brand:before {
