--- a/libs/jade/styles/icons.jade
+++ b/libs/jade/styles/icons.jade
@@ -318,13 +318,8 @@ block content
 						td vertical dots
 						td.variable @i-vertical-dots
 						td.unicode \e901
-					tr.i-circle
+					tr.i-github
 						td.icon
-						td circle
-						td.variable @i-circle
+						td github
+						td.variable @i-github
 						td.unicode \e902
-					tr.i-circle-check
-						td.icon
-						td circle-check
-						td.variable @i-circle-check
-						td.unicode \e903
