add: Added a link to the repo in the top right of the styleguide
Put the repo version with a link to the repo in the styleguide header, to the right. Used the octocat, because octocat. This should give people an easy way to find the repo source and patch notes

--- a/libs/guide.less
+++ b/libs/guide.less
@@ -986,6 +986,21 @@ div.tooltip:before {
     }
 }
 
+
+#repo {
+    display: inline-block;
+    float: right;
+    padding: 1.5rem 1rem;
+    cursor: pointer;
+    color: @white;
+    &:after {
+        .icon;
+        color: @white;
+        content: @i-github;
+        padding-left: .5rem;
+    }
+}
+
 // Icons page
 .iconlist {
     .icon {
