--- a/libs/site.less
+++ b/libs/site.less
@@ -89,6 +89,7 @@
 @import "modules/main-nav-v1";
 @import "modules/main-nav-v2";
 @import "modules/main-nav-v3";
+@import "modules/home.less";
 
 /* IE styles */
 @import "base/ie";
