dev: Updated content of post tool
Updated the content of the redesigned post tool for 2i and show and tell

--- a/libs/jade/dev/post-tool-2/post-tool-4.jade
+++ b/libs/jade/dev/post-tool-2/post-tool-4.jade
@@ -27,18 +27,26 @@ block content
 		.flex-container
 			.flex-row
 				.form.col-xs-12.col-md-4
-					h2 Confirmation
-					p This is what your email and letter to the services you chose will look like.
-					ul
-						li Local Electoral Registration
-						li The Mailing Preference Service
-						li Royal Mail
-						li Direct Marketing Association
-					p You can go back and make changes if you need to.
+					h2 Check your details
+					p Here’s an example of what your email or letter will look like.
+					p You can go back and make changes to your personal details if you need to.
 
 					a.btn-light.left-button-icon(href="post-tool-3.html") Edit details
 					a.btn.right-button-icon(href="post-tool-5.html") Confirm
 
 				#letter.col-xs-12.col-md-8
 					.letter-content
-						p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce congue nisi sit amet tellus semper mollis. Integer ut congue ipsum. Pellentesque placerat sem ut tellus lacinia mattis. Sed viverra purus nec neque vehicula gravida.
+						p 200 Aldersgate St
+							br
+							| &nbsp;
+							br
+							| London
+							br
+							| EC1A 4HD
+						p &nbsp;
+						p Please accept this communication as instructions to remove the above address from receiving all unaddressed items.
+						p I understand that I may miss information from local or national government or other publications that are sent using this service.
+						p &nbsp;
+						p Domenico Perri
+							br
+							| domenico.perri@citizensadvice.org.uk
