--- a/libs/jade/dev/post-tool-2/post-tool-5.jade
+++ b/libs/jade/dev/post-tool-2/post-tool-5.jade
@@ -16,8 +16,8 @@ block breadcrumbs
 block content
 	.articleContent
 		div
-			h2 Your emails
-			p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent aliquam, massa sed mattis convallis, nunc risus consectetur urna, id pretium sem orci placerat turpis. Nunc a accumsan orci, in dignissim sapien.
-			p Your emails to x and y will be sent. You will also recieve a confirmation email.
+			h2 Send your emails
+			p Please confirm that you’d like to email ‘Your Choice’ scheme and Mailing Preference Service.
+			p You’ll get an email confirmation from the organisations.
 
 			a.btn-primary.email-button-icon(href="post-tool-6.html") Send and continue
