--- a/libs/jade/dev/post-tool-2/post-tool-6.jade
+++ b/libs/jade/dev/post-tool-2/post-tool-6.jade
@@ -16,57 +16,35 @@ block breadcrumbs
 block content
 	.articleContent
 		div
-			h2 Your letters
+			h2 Your letter to your electoral registration office
 
-			p Your local electoral registration office is listed below, and on your letter when you download it.
+			p Download and send this letter to your local registration office. The address you need is below, and will also be on the letter when you download it.
+			p It’s a good idea to check their website to see if you can contact them by phone or email instead.
 
-			p You'll need to post or email them your letter as an attachment to be taken off the ‘open register’.
+			h2 Your letter for your local electoral registration office
+			p
+				strong London Borough of Bromley
 
-			p It's worth checking their website to see whether they prefer to receive letters, or emails.
+			p Visit the #[a(href="#") London Borough of Bromley website]
 
-			.well--outline
-				h2 Your letter for Royal Mail Door to Door
+			p Email: electoral@bromley.gov.uk
 
-				p
-					| Royal Mail Door to Door
-					br
-					| Address Line 1
-					br
-					| Address Line 2
-					br
-					| Town
-					br
-					| City
-					br
-					| Postcode
+			p Phone: 0300 3038665
 
+			p
+				| London Borough of Bromley
+				br
+				| Electoral Services
+				br
+				| Civic Centre
+				br
+				| Stockwell Close
+				br
+				| Bromley
+				br
+				| BR1 3UH
+
+			p
 				a.btn-secondary.save-button-icon(href="post-tool-7.html") Download
-
-			.well--outline
-				h2 Your letter for your local electoral registration office
-				p
-					strong London Borough of Bromley
-
-				p Visit the #[a(href="#") London Borough of Bromley website]
-
-				p Email: electoral@bromley.gov.uk
-
-				p Phone: 0300 3038665
-
-				p
-					| London Borough of Bromley
-					br
-					| Electoral Services
-					br
-					| Civic Centre
-					br
-					| Stockwell Close
-					br
-					| Bromley
-					br
-					| BR1 3UH
-
-				p
-					a.btn-secondary.save-button-icon(href="post-tool-7.html") Download
 
 			a.btn.right-button-icon(href="post-tool-7.html") Finish
