--- a/libs/jade/dev/post-tool-2/post-tool-7.jade
+++ b/libs/jade/dev/post-tool-2/post-tool-7.jade
@@ -16,8 +16,6 @@ block breadcrumbs
 block content
 	.articleContent
 		div
-			p Thank you for completing the tool. You’ll start to see a difference in the amount of junk mail you receive within the next 4 weeks.
+			p You’ll start to see a difference in the amount of junk mail you receive within the next 4 weeks.
 
-			p Put a ‘no junk mail’ sign on your door or letterbox to help stop junk mail that's delivered door-to-door - for example takeaway menus
-
-			p You can make a sign yourself - write “No commercial leaflets”. You also can order stickers online from the #[a.a-external(href="#") Stop Junk Mail Campaign].
+			p Put a ‘no junk mail’ sign on your door or letterbox to help stop junk mail that's delivered door-to-door straight away. You also can order stickers online from the #[a.a-external(href="#") Stop Junk Mail Campaign].
