--- a/libs/jade/dev/post-tool-2/post-tool.jade
+++ b/libs/jade/dev/post-tool-2/post-tool.jade
@@ -16,17 +16,18 @@ block breadcrumbs
 block content
 	.articleContent
 		div
-			p Use this tool to easily contact the 4 organisations that will help to reduce the amount of junk mail you get through the post.
-
+			p Use this tool to easily contact up to 4 organisations that will help to reduce the amount of junk mail you get through the post.
 			p There's no single organisation you can register with, it's best to contact them all.
-
-			p This tool will either send an email, or give you a letter to send to each organisation to let them know you don't want junk mail.
+			p This tool will:
+			ul
+				li send emails on your behalf to organisations that can reduce your junk mail
+				li give you letters to download and send organisations that can reduce your junk mail
+			p You can choose which organisations to contact.
 
 			.callout--alert
 				p Put a ‘no junk mail’ sign on your door or letterbox to help stop junk mail that's delivered door-to-door - for example takeaway menus
+				p You can order stickers online from the #[a.a-external(href="#") Stop Junk Mail Campaign].
 
-				p You can make a sign yourself - write “No commercial leaflets”. You also can order stickers online from the #[a.a-external(href="#") Stop Junk Mail Campaign].
-
-			p You'll still get post addressed to 'the occupier', and from organisations that you've communicated with before.
+			p You’ll still get mail from organisations that you’ve asked to send you marketing material, for example charities or businesses.
 
 			a.btn.right-button-icon(href="post-tool-2.html") Start
