--- a/libs/jade/index.jade
+++ b/libs/jade/index.jade
@@ -11,10 +11,6 @@ block content
 	// NEW INDEX
 	//.articleContent
 		.newrow
-			.span8-md
-				p Intro to styleguide. Contains things and such.
-
-		.newrow
 			.span6-sm
 
 				h2 Getting started
@@ -40,8 +36,7 @@ block content
 		.newrow
 			.span8-md
 				h2 Digital design elements
-				p here are the elements. lovem.
-
+				p This is a guide to demonstrate elements such as layout, typography, forms, buttons and icons.
 		.newrow
 			.span3-md.span6-sm
 				h3#Styles Styles
