--- a/libs/jade/dev/post-tool-2/post-tool-2.jade
+++ b/libs/jade/dev/post-tool-2/post-tool-2.jade
@@ -16,49 +16,38 @@ block breadcrumbs
 block content
 	.articleContent
 		div
-			h2 Royal Mail Door to Door
-			p Royal Mail deliver mail for charities, businesses and other organisations who've paid for the service. Tick this box tell Royal Mail you don't want junk mail from them.
-			//section.revealable
-				h2 More about Royal Mail Door to Door
-
-				p Royal Mail deliver mail for charities, businesses and other organisations who've paid for the service. Tick this box tell Royal Mail you don't want junk mail from them.
+			p Choose which organisations you’d like to contact.
+			h2 Email Royal Mail 'Door to Door'
+			p Charities, businesses and other organisations often pay Royal Mail to deliver marketing post for them. Tick this box to send an email to Royal Mail saying that you don't want this marketing post.
+			p They’ll send you a form to fill in.
 			fieldset
 				label.checkbox.checkbox--block
 					input(name="checkbox", type="checkbox")
-					| I would like to opt in to Royal Mail Door to Door
+					| I don’t want to get marketing post from Royal Mail ‘Door to Door’
 
-			h2 ‘Your Choice’ scheme
-			p This will reduce the amount of junk mail you receive.
-			//section.revealable
-				h2 More about Direct Marketing Association’s ‘Your Choice’ scheme
-
-				p This will reduce the amount of junk mail you receive.
+			h2 Email the ‘Your Choice’ scheme
+			p The ‘Your Choice’ scheme allows you to get less marketing mail from various organisations, including government, political parties, charities, and businesses.
+			p This means you won’t get leaflets, for example from political parties or your local council, but you’ll still get any post that’s directly addressed to you.
+			p They’ll send you a form to fill in.
 			fieldset
 				label.checkbox.checkbox--block
 					input(name="checkbox", type="checkbox")
-					| I would like to opt in to Direct Marketing Association’s ‘Your Choice’ scheme
+					| I want to join the ‘Your Choice’ scheme to get less junk mail
 
-			h2 Mailing Preference Service
-			p The DMA has a list of people who don't want to get junk mail. Tick this box to add yourself to the list.
-			//section.revealable
-				h2 More about Mailing Preference Service
-
-				p The DMA has a list of people who don't want to get junk mail. Tick this box to add yourself to the list.
+			h2 Email the Mailing Preference Service
+			p The Mailing Preference Service keep a list of people who don’t want to get marketing post. Businesses that check this list will stop sending you mail. Tick this box to add your address to the list.
+			p They’ll send you a confirmation email.
 			fieldset
 				label.checkbox.checkbox--block
 					input(name="checkbox", type="checkbox")
-					| I would like to opt in to Mailing Preference Service
+					| I want to add my address to the Mailing Preference Service list
 
-			h2 Your local electoral registration office
-			p The MPS has a list of people who don't want to get junk mail. Tick this box to add yourself to the list.
-			//section.revealable
-				h2 More about Your local electoral registration office
-
-				p The MPS has a list of people who don't want to get junk mail. Tick this box to add yourself to the list.
+			h2 Write to your electoral registration office
+			p Your local electoral registration office keeps a list of addresses called the ‘open register’. This list can be bought and used it to send junk mail. Tick this box to download a letter to send to your local office, asking them to remove you from the open register. It won’t affect your right to vote.
 			fieldset
 				label.checkbox.checkbox--block
 					input(name="checkbox", type="checkbox")
-					| I would like to opt in to my local electoral registration office
+					| I want to be removed from the open register at my electoral registration office
 
 			a.btn-light.left-button-icon(href="post-tool.html") Back
 			a.btn.right-button-icon(href="post-tool-3.html") Next
