Add: Update home mockup

--- a/libs/jade/home.jade
+++ b/libs/jade/home.jade
@@ -192,10 +192,18 @@ html
 		.main-container
 		.home-first
 			.home__content
-				.col-md-6.col-sm-12
-					h1 Welcome to Citizens Advice
-					p We provide free, independent, confidential and impartial advice to everyone on their rights and responsibilities. We value diversity, promote equality and challenge discrimination.
-				.col-md-3.col-sm-12
+				.flex-container.flex-row
+					.col-md-6.col-sm-12
+						h1 Welcome to Citizens Advice
+						p We provide free, independent, confidential and impartial advice to everyone on their rights and responsibilities. We value diversity, promote equality and challenge discrimination.
+					.col-md-6.col-sm-12.home__content-trends
+						h2 Trending issues
+						p #[a(href="#") Employment Support Allowance ]
+						p #[a(href="#") Personal Independence Payment ]
+						p #[a(href="#") Basic rights at work ]
+						p #[a(href="#") Report to Trading Standards ]
+						p #[a(href="#") Consumer ]
+
 		.home-second
 			.home__content
 				.flex-container.flex-row
