--- a/libs/modules/home.less
+++ b/libs/modules/home.less
@@ -16,6 +16,29 @@
     .limit-width(@breakpoint-lg);
     padding: @box-spacing-vertical @box-spacing-horizontal @box-spacing-vertical*2 @box-spacing-horizontal;
     //max-width: @breakpoint-lg;
+    &-trends {
+        background-color: @heritage-yellow;
+        margin-top: 3em;
+        margin-bottom: 0.6em;
+        padding: 1rem;
+        border-radius: @form-border-radius;
+        h2, h3 {
+            font-weight: @font-weight-bolder;
+            font-size: @font-size-medium;
+            margin-top: 0;
+            a {
+                border-bottom: none;
+            }
+        }
+        p {
+            font-weight: @font-size-small;
+            font-weight: @font-weight-bold;
+            margin-bottom: 0.4rem;
+            a {
+                border-bottom: none;
+            }
+        }
+    }
 }
 
 .blog-lead {
