dev: Changed the yellow callout to blue

--- a/libs/jade/dev/post-tool-2/post-tool.jade
+++ b/libs/jade/dev/post-tool-2/post-tool.jade
@@ -24,7 +24,7 @@ block content
 				li give you letters to download and send organisations that can reduce your junk mail
 			p You can choose which organisations to contact.
 
-			.callout--alert
+			.callout
 				p Put a ‘no junk mail’ sign on your door or letterbox to help stop junk mail that's delivered door-to-door - for example takeaway menus
 				p You can order stickers online from the #[a.a-external(href="#") Stop Junk Mail Campaign].
 
