--- a/libs/jade/home.jade
+++ b/libs/jade/home.jade
@@ -196,33 +196,58 @@ html
 					.col-md-6.col-sm-12
 						h1 Welcome to Citizens Advice
 						p We provide free, independent, confidential and impartial advice to everyone on their rights and responsibilities. We value diversity, promote equality and challenge discrimination.
-					.col-md-6.col-sm-12.home__content-trends
-						h2 Trending issues
-						p #[a(href="#") Employment Support Allowance ]
-						p #[a(href="#") Personal Independence Payment ]
-						p #[a(href="#") Basic rights at work ]
-						p #[a(href="#") Report to Trading Standards ]
-						p #[a(href="#") Consumer ]
+						.home__content-trends
+							h2 Most viewed 
+							p #[a(href="#") Employment Support Allowance ]
+							p #[a(href="#") Personal Independence Payment ]
+							p #[a(href="#") Basic rights at work ]
+							p #[a(href="#") Report to Trading Standards ]
+							p #[a(href="#") Consumer ]
+					.col-md-6.col-sm-12.hide-mobile.home--feature
+						img(src="../images/sample-blog/man_on_phone.svg" alt="" style="width:100%;")
+
 
 		.home-second
 			.home__content
 				.flex-container.flex-row
 					div.col-sm-4.col-sm-12								
-							h2 Latest blog
-							p Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+						.blog-lead
+							.blog-name
+								p Issues affecting people
+						.data-display
+							p.data-display-intro Problems at work
+							p We research issues affecting people everyday and lobby Government to change policy.
+							h3 380,000
+							p employment issues in 2015
+							h3 84%
+							p increase in unauthorised deduction from wages
+							p #[a(href="#") Read more about our research ]		
 
 					div.col-sm-4.col-sm-12
 						.blog-lead
 							.blog-name
 								p Latest Blog
 								h3 #[a(href="#") Payday loans: An improved market? ]
+							img(src="../images/sample-blog/adviser-needs.jpg" alt="Blog image" style="width:100%;")
 							p Since the Financial Conduct Authority (FCA) took over the regulation of the consumer credit sector the payday loan market has undergone a wave of changes.
 
-					div.col-sm-4.col-sm-12
+					div.col-sm-4.col-sm-12.blog-sidebar--updates(style="background-color:#a6d6ae; height:100%;")
+						.card-banner-top
+							p(style="color:#57486b;") Help others
+						.card-text
+							img(src="../images/sample-blog/mugs-purple.svg" alt="volunteer" style="width:80%;")
+							p(style="color:#333;") Join one of over 300 local Citizens Advice, get training and help people.
+							fieldset
+								label(for="standardField", style="color:#57486b;") Search your area
+								input#standardField(placeholder="", type="text")
+
+							button.btn.btn-secondary.right-button-icon Search roles
+					//div.col-sm-4.col-sm-12
 						.blog-lead
 							.blog-name
 								p Volunteer opportunities
 								h3 #[a(href="#") Become a volunteer in your community ]
+							img(src="../images/sample-blog/pip-feature-images-2.jpg" alt="Become a volunteer" style="width:100%;")
 							p Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
 
 		//.footer-feedback
@@ -230,18 +255,47 @@ html
 			.footer-feedback__content
 				p Is there anything wrong with this page? #[a(href="#") Let us know].
 
-		footer.main-footer(data-track-zone="footer", id="footer")
-			.styleguide--footer
-				div
+		#footer.main-footer(data-track-zone="footer")
+			.footer-content.flex-row
+				.flex-column.col-xs-12.col-md-9
+					h3 Get Advice
+					.flex-row(style="padding: 0;")
+						.col-xs-12.col-sm-4
+							ul
+								li #[a(href="#") Benefits]
+								li #[a(href="#") Work]
+								li #[a(href="#") Debt and money]
+								li #[a(href="#") Consumer]
+
+						.col-xs-12.col-sm-4
+							ul
+								li #[a(href="#") Relationships]
+								li #[a(href="#") Housing]
+								li #[a(href="#") Law and rights]
+								li #[a(href="#") Discrimination]
+
+						.col-xs-12.col-sm-4
+							ul
+								li #[a(href="#") Tax]
+								li #[a(href="#") Healthcare]
+								li #[a(href="#") Education]
+								li #[a(href="#") A to Z of advice]
+
+				.flex-column.col-xs-12.col-md-3
+					h3 Information
+					ul
+						li #[a(href="#") Help]
+						li #[a(href="#") Cymraeg]
+						li #[a(href="#") Terms and conditions]
+						li #[a(href="#") Privacy and cookies]
+
+			.footer--legal
+				.footer--legal--content
+					img(alt="", src="../images/ca_wo-logo-100px.svg")
 					p
-						img(alt="", height="100", src="images/ca-logo_100px.svg", width="100")
-						| Copyright © 2015 Citizens Advice. All rights reserved.
+						| Copyright © 2016 Citizens Advice, an operating name of the National Association of Citizens Advice Bureaux.
 						br
-						| Citizens Advice is an operating name of the National Association of Citizens Advice Bureaux. Registered charity number 279057
-						br
-						| VAT number 726 0202 76 Company limited by guarantee. Registered number 1436945 England
-						br
-						| Registered office: Citizens Advice, 3rd Floor North, 200 Aldersgate, London, EC1A 4HD
+						| Registered charity number 279057; Registered in England 1436945; VAT number GB726020276. 3rd Floor North, 200 Aldersgate, London, EC1A 4HD
 
 
 		<!--[if IE 8]></div><![endif]-->
