--- a/libs/modules/home.less
+++ b/libs/modules/home.less
@@ -26,6 +26,7 @@
             font-weight: @font-weight-bolder;
             font-size: @font-size-medium;
             margin-top: 0;
+            .btn-icon("\2716")
             a {
                 border-bottom: none;
             }
@@ -57,4 +58,29 @@
             }
         }
     }
+    img {
+        margin: .5rem 0;
+    }
+}
+
+.data-display {
+    h3 {
+        font-weight: @font-weight-boldest;
+        font-size: 4rem;
+        color: @heritage-blue;
+        margin: 0;
+    }
+    p {
+        color: @heritage-blue;
+        margin-top: 0;
+    }
+}
+.data-display-intro {
+    font-size: @font-size-medium;
+    font-weight: @font-weight-bolder;
+    line-height: 1.8rem;
+    margin-bottom: 0;
+}
+.home--feature {
+    margin-bottom: -1.85rem;
 }
