Dev: Update nav and dropdown colours

--- a/libs/modules/main-nav-v3.less
+++ b/libs/modules/main-nav-v3.less
@@ -41,7 +41,7 @@
                     display: inline-block;
                     border: none;
                     &:hover {
-                        background-color: @heritage-yellow-lighter;
+                        background-color: @blue-lighter;
                     }
                     &:after {
                         font-weight: 300;
@@ -52,7 +52,7 @@
                     }
                 }
                 &.active a {
-                    background-color: @heritage-yellow-lighter;
+                    background-color: @blue-lighter;
                     color: @heritage-blue;
                 }
             }
@@ -185,7 +185,7 @@
 }
 
 #main-nav-3--dropdown, #main-nav-3--dropdown-1 {
-    background-color: @heritage-yellow-lighter;
+    background-color: @blue-lighter;
     overflow: hidden;
     .content {
         max-width: @breakpoint-lg;
