--- a/libs/jade/dev/site/volunteering.jade
+++ b/libs/jade/dev/site/volunteering.jade
@@ -1,10 +1,9 @@
 block settings
 	- var title = "Volunteering with the Citizens Advice network"
 	- var sidebar = true
-	- var mockup = true
 	- var dir = "../../"
 
-extends /template/template.jade
+extends /template/template-site.jade
 
 block breadcrumbs
 	+breadcrumbs([
