add: Added styles for new landing pages

--- a/libs/site.less
+++ b/libs/site.less
@@ -85,11 +85,12 @@
 @import "modules/cards";
 @import "modules/blog";
 
-// Styles for new main navs
+// Styles for new site styles
 @import "modules/main-nav-v1";
 @import "modules/main-nav-v2";
 @import "modules/main-nav-v3";
 @import "modules/home.less";
+@import "modules/landing.less";
 
 // Styles for new main navs
 @import "modules/main-nav-v1";
